# softwarebanco

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  softbanco
conector/: Conector.cpp
model/: Cliente.cpp  Persona.cpp  Trabajador.cpp
view/: main.cpp
